req file update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-requests==2.25.1
-beautifulsoup4==4.9.3
-pyperclip==1.8.1
+requests==2.22.0
+pyperclip==1.8.2
+beautifulsoup4==4.12.2
+PyPDF2==3.0.1
